Edited the GUI design section, and resized and renamed the pictures.

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -54,11 +54,11 @@ As we had decided to incorporate both group and one-to-one chats, this provided 
 
 \subsubsection{Aims}
 
-With any user interface, the primary goal is usability. As instant messengers have existed for a number of years, there is a standard layout which users expect, and are comfortable with. The goal of our GUI was to provide a simple and intuative interface, without changing what users would expect from an IM application.  
+With any user interface, the primary goal is usability. As instant messengers have existed for a number of years, there is a standard layout which users expect and are comfortable with. The goal of our GUI was to provide a simple and intuitive interface, without using something too different from what users would expect from an IM application.
  
 \subsubsection{Example Use Cases}
 
-The GIM use cases were created in order to provide an easily understood reference for how the system should operate at a high layer of abstraction. The following are examples of key use cases as defined during the design process. Two actors were identified for the system; ``Senders'' and ``Contacts''. Both of these actors have equal rights within the system, and use the system in the same way, hence both derive from the ``User'' type. This distinction between senders and contacts is made for the design process, as in reality users of the system are both senders and contacts. These use cases have not been altered slightly for inclusion within this document.
+The GIM use cases were created in order to provide an easily understood reference for how the system should operate at a high layer of abstraction. The following are our most important use cases as defined during the design process. Two actors were identified for the system: ``Senders'' and ``Contacts.'' Both of these actors have equal privileges within the system and use the system in the same way, hence both derive from the ``User'' type. This distinction between senders and contacts is made for the design process, as in reality users of the system are both senders and contacts.
 
 {\bf Add contact}
 User clicks the ``add contact'' button in the main window, or the option from the top menu. They are prompted to enter their friend's email. They enter the email and the system searches for that person in the database. If found, the contact is sent a request for friendship. If the contact accepts, then both the user and contact now have each other as contacts, and they show up in the main window. If not accepted, neither is added. If the contact is not found, they are prompted again to enter the email, with the option to cancel.
@@ -75,14 +75,14 @@ The use of informal notation for the use cases was, in retrospect, ill-conceived
 
 \subsubsection{Interface Wireframes}
 
-With the use cases, we started to design a GUI which could accommodate the desired features. Although many UI sketches were made, they were all minor variations on the core design which we derived from the traditional Windows Live Messenger model.
+With these use cases we started to design a GUI that could accommodate the desired features. Although many UI sketches were made, they were all minor variations on the core design which we derived from the traditional instant messenger model, such as used in Windows Live.
 
-\includegraphics[scale=0.65]{Design/diagrams/Main UI.png}
+\includegraphics[width=7cm]{Design/diagrams/Main_UI.png}
 
 This is the wireframe for the main window the user will see after they have logged in. The layout is typical of instant messenger programs, and represents what users would expect to see.
 
-\includegraphics[scale=0.65]{Design/diagrams/Chat Box.png}
+\includegraphics[width=7cm]{Design/diagrams/Chat_Box.png}
 
-This wireframe represents the window which is created when a chat is initiated, either by themselves or another user. The chat box has a similar layout to the main window, to aid consitency. The user details are at the top, the main body of content is in the middle, and the user operations are at the bottom.
+This wireframe represents the window which is created when a chat is initiated, either by themselves or another user. The chat box has a similar layout to the main window, to aid consistency. The user details are at the top, the main body of content is in the middle, and the user operations are at the bottom.
 
 These wireframes served as the basis for the Swing implementation. While the features of the final interface are unchanged from the wireframes, some slight alterations were made to the layout. These modifications were typically the result of the practicalities of using Swing and the natural evolution during implementation. Examples of these alterations are the removal of buttons for emoticons, file transfer, and group chat, and a different position for the status icons in the main window.
