--- a/TP3/dissertation/Requirements/features.tex
+++ b/TP3/dissertation/Requirements/features.tex
@@ -1,4 +1,5 @@
 \section{Features}
+\label{features}
 
 Once we established how to structure user communication, the next task was to determine what the important features of an instant messenger were, and what was achievable within the scope of the project. This process involved several team meetings where we discussed our experience with a variety of existing instant messengers and picked areas that we wished to draw from.
 
