--- a/TP3/dissertation/Design/protocol.tex
+++ b/TP3/dissertation/Design/protocol.tex
@@ -1,6 +1,7 @@
 \newcommand\SLASH{\char`\\}
 
 \section{Protocol Design}
+\label{protocol_design}
 
 \subsection{Protocol Overview}
 
@@ -45,9 +46,9 @@ Commands names are predefined and \texttt{<COMMAND\_NAME>} can be any 1 of the f
  \end{tabular}
 }
  
-\texttt{<ARGUMENTS>} is a set of zero or more predefined arguments which can be passed to the command in order to change its behaviour. Each command has its own set of arguments. Some commands require arguments (sometimes more than one) and some commands have no arguments. The protocol specification defines over 60 arguments, and a full listing for each command can be found in the \emph{GIM Protocol Specification Document}.
+\texttt{<ARGUMENTS>} is a set of zero or more predefined arguments which can be passed to the command in order to change its behaviour. Each command has its own set of arguments. Some commands require arguments (sometimes more than one) and some commands have no arguments. The protocol specification defines over 60 arguments, and a full listing for each command can be found in Appendix \ref{protocol_spec}.
 
-Unlike the command and argument segments, the \texttt{<DATA>} segment does not have any predefined values and has a varying syntax across different commands.  For example, the \texttt{:ROOM:} command has \texttt{:JOIN:} and \texttt{:LEAVE:} arguments which are used to join or leave a chat. The majority of the data is likely to have been provided by the user at some point, and as such the data segment is considered to be ``unsafe". This data is encoded (See \emph{Encoding, Limits and Restrictions} for information about how the data is encoded). A full specification for the data segment of each command can be found in the \emph{GIM Protocol Specification Document}. %should there be a link to this?
+Unlike the command and argument segments, the \texttt{<DATA>} segment does not have any predefined values and has a varying syntax across different commands.  For example, the \texttt{:ROOM:} command has \texttt{:JOIN:} and \texttt{:LEAVE:} arguments which are used to join or leave a chat. The majority of the data is likely to have been provided by the user at some point, and as such the data segment is considered to be ``unsafe.'' This data is encoded (see section \ref{encoding} for more information). A full specification for the data segment of each command can also be found in Appendix \ref{protocol_spec}.
 
 For example, the following is an example of a command sent from the client to the server requesting the Nickname and Status of the users joe@example.com and bill@gmail.org:
 
@@ -62,7 +63,7 @@ bill\SLASH U+0040mail.org\\
 Billy The Kid\\
 AWAY;}
 
-\emph{(Please note that the data segments is the previous examples have been encoded as defined below in Encoding, Limits and Restrictions.)}
+The data segments in the previous examples have been encoded as defined below in section \ref{encoding}.
 
 \subsection{Roles and States}
 
@@ -72,10 +73,11 @@ Having clearly defined roles is an integral part of the GIM Protocol. This allow
 
 For example, the \texttt{:AUTH:} command can be sent by both the client and the server. When sent by the server it is used to indicate the current state of the client (Either Logged-in or Unauthorized) but when sent by the client it indicates that a user wishes to login or register a new account. This means that the same command must be implemented differently depending on the role of the sender.
 
-As mentioned above, the client role has 2 states: Logged-in and Unauthorized. When the client first establishes a connection it is placed in the unauthorized state. This means that it has access to an even smaller subset of commands, only those essential to logging-in or registering a new account. Once the client has successfully logged-in it is granted access to the full set of client commands.
+As mentioned above, the client role has 2 states: Logged-in and Unauthorized. When the client first establishes a connection it is placed in the unauthorized state. This means that it has access to an even smaller subset of commands, only those essential to logging-in or registering a new account. Once the client has successfully logged-in, it is granted access to the full set of client commands.
 
 
 \subsection{Encoding, Limits and Restrictions}
+\label{encoding}
 
 Any non-letter or digit (anything not a-Z or 0-9) in the data segment of a command is encoded and replaced by \texttt{\SLASH U+} followed by a 4 digit number representing the UTF-16 code for the character. For example, the @ character in the previous example is encoded as \texttt{\SLASH U+0040}. The only exception to this rule is a character which is used to format or separate different chunks of data. In the GIM Protocol this is always either a single space (the equivalent of \texttt{\SLASH U+0020}) or a newline character (\texttt{\SLASH n}).
 
@@ -85,7 +87,7 @@ This makes the protocol very easy to parse as we can safely split the data segme
 
 Clients connected to the server are limited to sending 100 commands in a rolling 5 second window. Normal usage should result in a much lower rate (less than 5 per second) and anything more than than this most likely indicates a malfunctioning or malicious client. In the event a client exceeds this limit, the server closes the connection with the client.
 
-The data segment of commands sent by the client is limited to 8192 characters in length. This includes data that has been encoded, so a single @ character encoded as \SLASH U+0040 counts for 7 characters towards the limit. The only exception to this rule is the \texttt{:SET DISPLAY\_PIC:} command, which is used to set a users display picture. The limit for this command is 4x greater than that of a normal command (32,768 characters or around 24kb worth of JPEG data). The server has no such limits and can send commands of any length.
+The data segment of commands sent by the client is limited to 8192 characters in length. This includes data that has been encoded, so a single @ character encoded as \texttt{\SLASH U+0040} counts for 7 characters towards the limit. The only exception to this rule is the \texttt{:SET DISPLAY\_PIC:} command, which is used to set a users display picture. The limit for this command is 4x greater than that of a normal command (32,768 characters or around 24kb worth of JPEG data). The server has no such limits and can send commands of any length.
 
 \subsection{Heart Beat}
 
@@ -95,7 +97,7 @@ In order to ensure that clients are working correctly and have not disconnected 
 
 The protocol specifies an \texttt{:ERROR:} command which the server may send if it has received a command it cannot fulfill. Almost all of the commands which can be sent by the client, with the exception of the \texttt{:PING:} command, can generate an \texttt{:ERROR:}. The specific type of error is signified by the arguments of the command, for example, an attempt to login with incorrect details might yield \texttt{:ERROR LOGIN\_DETAILS\_INCORRECT:;}.
 
-The \texttt{:ERROR:} command can be very cumbersome to use as there are a very large number of arguments (usually several for every different command) and it can be difficult to match an error to a command as there is no identification of the command which caused it. Possible changes to address these issues are discussed in Protocol Evolution.
+The \texttt{:ERROR:} command can be very cumbersome to use as there are a very large number of arguments (usually several for every different command) and it can be difficult to match an error to a command as there is no identification of the command which caused it. Possible changes to address these issues are discussed in section \ref{protocol_evol}.
 
 \subsection{Client-Server Interaction}
 
@@ -112,7 +114,7 @@ Once a client has entered the logged-in state it is able to send any command at 
     \end{figure}
 \end{landscape}
 
-Figure \ref{interactionDia} shows typical usage of the GIM protocol. The following is a detailed description of the diagram above.
+Figure \ref{interactionDia} shows typical usage of the GIM protocol. The following is a detailed description of the diagram.
 \begin{enumerate}
 \item{A client connects, attempts to log in using the \texttt{:AUTH LOGIN:} command, and waits for a reply.}
 \item{The server responds \texttt{:AUTH OKAY:} signifying that the information was correct and the user has been logged in.}
@@ -129,6 +131,7 @@ Figure \ref{interactionDia} shows typical usage of the GIM protocol. The followi
 \end{enumerate}
 
 \subsection{Protocol Evolution}
+\label{protocol_evol}
 
 The GIM Protocol has undergone several significant changes since its first draft, such as the addition of different types of rooms and the removal of commas as separators to simplify the data segment. The most notable of these however was a move toward a smaller number of commands. This was done by merging similar commands together and allowing their behaviour to be modified by arguments. The number of commands was cut from 30 to 19, and resulted in a much easier to understand and more consistent protocol. Although this hid some of the complexity at a high level, it means that many of the commands are more complex. Overall this trade-off has been worthwhile and has made the protocol easier to use, at the cost of being slightly harder to implement.
 
