--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -14,7 +14,7 @@ In designing the client, we had the high level aim of creating a modular system 
 
 It was agreed that the MVC (Model-View-Controller) architectural pattern, widely used for applications involving a graphical user interface, was a useful model to base our discussions around. This model abstracts the UI (view) from the back end of the system. When a user performs an action, the controller updates the model if any data associated with the system is changed, and updates the viewer to reflect these changes in the system state. This seemed appropriate to our needs of keeping and displaying an up-to-date record of the user's friend list and creating an interface, and would allow us to split responsibilities between the back and front end of the GUI.
 
-However, we faced challenges in adapting an additional networking component to implement the GIM protocol into this framework. We had the choice to conceptualise it as either an additional interface, which `viewed' changes to the model, or indirectly (by way of the network) as a part of the controller component. [discussion about possible merits of both goes here] We decided it would be useful to treat the networking code as part of the controller, as it would be modifying the model based on the server's response to its calls, and modifying the GUI to reflect these changes.
+However, we faced challenges in adapting an additional networking component to implement the GIM protocol into this framework. We had the choice to conceptualise it as either an additional interface, which was 'controlled' by the server and controller, or indirectly (by way of the network) as a part of the controller component. As an additional interface, it could 'view' changes from users on the friends list, as notified by the server, and view changes to the model that it needed to know about. Although this was an interesting conceptual idea, it was difficult to consider how, or if, it could work in practicality. Instead, we decided it would be useful to treat the networking code as part of the controller, as it would be modifying the model based on the server's response to its requests, and modifying the GUI to reflect these changes. However, for the sake of design, it was more useful to think of it as a component the controller interacted with.
 	
 This high level approach allowed us to draw boundaries between components and assign the more detailed design of individual components to team members. We decided a logical split would be to assign two members to the networking aspects of the system (client and server), and two members to the GUI components of the system (the GUI and its model). However, further collaboration was required as it became more evident what was required for each component, as will be discussed.
 
