--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -36,6 +36,32 @@ The buffers allow the worker to run using several threads which increases the pe
     \end{center}
 \end{figure}
 
+\subsection{User Accounts}
+A user is a registered account on the server with a unique identifier (an email address), password, nickname, personal message, display picture, status, and friend list. 
+
+
+\subsubsection{Identification}
+The user's identifier and password are used to authenticate the user at login. These cannot be changed one the account has been created. 
+
+
+\subsubsection{Nickname}
+A user's nickname is a short and familiar name for that user. A nickname does not need to be unique and is not intended to be used as an identifier by the system. By default a user's nickname is their email address.
+
+
+\subsubsection{Personal Message}
+The personal message is a medium length message (usually only a sentence or two) which the user can use to share news or any information about themselves.
+
+
+\subsubsection{Status}
+A user can have one of several statuses: Online, Away, Busy and Appear Offline. The first three statuses are used simply as an indication of the user's likelihood to respond to a message. The Appear Offline status allows the user to appear to other users as though they were not signed in but still receive updates and messages from other users.
+
+\subsubsection{State}
+A user can have one of only two states, Online or Offline. States should not be confused with a user's status. A users status is simply an abstract representation, picked by the user, while a users state is an internal representation of the actual online state of the user. A user is only considered to be Online if they are connected using a client, and that client has logged-in successfully, otherwise they are considered to be Offline.
+
+\subsubsection{Friend List}
+Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List.
+
+
 \subsection{Client-to-Client Messaging}
 \label{c2c}
 No direct client to client communication is possible, however workers are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker.
@@ -49,37 +75,19 @@ Message routing in the server is fairly simple because of the use of Rooms. A Ro
 
 All chat messages in GIM are sent to Rooms rather than particular users. The server must maintain a list of the users in each room, and open receiving a message for that room, forward it to all of the users in the room (excluding the sender of the message). This is done using the method described in section \ref{c2c}. A \texttt{:MESSAGE:} command is generated and placed into the Response Buffer of the worker assigned to each of the recipients ready for the worker to send to the client.
 
-\subsection{Subscriptions and Notifications}
-One of the servers most critical responsibilities is notifying users of changes to the users they are subscribed to. A user is considered to be subscribed to users who are in their friend list or both users are currently in the same Room.
+\subsection{Subscriptions, Privacy and Notifications}
+One of the server's most critical responsibilities is notifying users of changes to the users; this is done using the concept of subscriptions.  A user (the subscriber) is considered to be subscribed to another user (the subscribee) if they meet at least one of two conditions:
 
-\subsection{User Accounts}
-A user is a registered account on the server with a unique identifier (an email address), password, nickname, personal message, display picture, status, and friend list. 
+\begin{enumerate}
+\item{The subscriber has the subscribee in their friend list, or had them in their friend list at some point in the past}
+\item{Both the subscriber and subscribee are in the same room}
+\end{enumerate}
 
-\subsubsection{Identification}
-The user's identifier and password are used to authenticate the user at login. These cannot be changed one the account has been created. 
+When a user updates their status or changes any piece of their user information such as their nickname or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when, and if it needs it.
 
-\subsubsection{Nickname}
-A user's nickname is a short and familiar name for that user. A nickname does not need to be unique and is not intended to be used as an identifier by the system. By default a user's nickname is their email address.
-
-\subsubsection{Personal Message}
-The personal message is a medium length message (usually only a sentence or two) which the user can use to share news or any information about themselves.
-
-\subsubsection{Display Picture}
-A Display Picture is a small image chosen by the user, often of themselves, so that they can be easily identified visually. By default a user's display picture is the GIM logo. 
-
-\subsubsection{Status}
-A user can have one of several statuses: Online, Away, Busy and Appear Offline. The first three statuses are used simply as an indication of the user's likelihood to respond to a message. The Appear Offline status allows the user to appear to other users as though they were not signed in but still receive updates and messages from other users.
-
-\subsubsection{Friend List}
-Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List. The server only grants access to information about a user if that user is in the requesting user's Friend List or if the users are currently in the same Room. This means that simply removing a user from your Friend List does not stop them from being able to view your information or message you.
-
-A user is considered to be `subscribed' to all of the users in their Friend List. This means that they receive update notifications from the server whenever a user in their Friend List updates their nickname, personal message, display picture or status.
-
-\subsubsection{Blocked User}
-A user is able to stop a another user from communicating with them and viewing their information by blocking that user. It is possible to block any user, even users not currently in your friend list. Blocking a user is a one-way process and does not stop a user from messaging or viewing information about users they have blocked.
+Subscriptions are also used as a method of access control. A user is only able to request information about another user if they are subscribed to that user. This limitation means that a user is effectively granting another user access to read their information by adding them to their friend list. However, the converse is not true. Removing a user from your friend list does not remove their access to your information as they may still have you in their friend list. In order to combat this, you are able to block a user which removes this access to your information and status updates. This enhances privacy and gives the user control of who is able to access their data.
 
 \subsection{Synchronisation}
-
 The server has a large section of backing data which stores all of the users, rooms, workers and any other operational data required by the server. Due to the highly concurrent nature of the server it is very important to ensure that the data is properly synchronised. This is to prevent race conditions where two writes occur on an object at the same time giving an unpredictable output. 
 
 \begin{figure}[!h]
@@ -92,6 +100,9 @@ The server has a large section of backing data which stores all of the users, ro
 
 To stop this the server must lock (claim ownership of) the data before it is updated. This is a very tricky thing to do as as the lock must be long enough to ensure that no updates occur between reading the original data and writing the updated data, whilst also keeping the lock as short as possible to avoid long periods of blocking and keep performance high.
 
+
+The server must also make sure only to lock when needed, and not obtain a lock for objects it does not require. This simplest solution would be to lock the entire data object, and only allow reads and writes through a proxy. However this would be extremely costly in terms of performance as writes to individual objects inside the data object would block writes to other objects, meaning that at any one time only a single write could occur. Instead the data object must be clever and only lock the objects which are to be written to, allowing for simultaneously writes to separate objects whist still stopping race conditions from occurring.
+
 \begin{figure}[!h]
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/server_locking.png}
@@ -99,8 +110,6 @@ To stop this the server must lock (claim ownership of) the data before it is upd
         \label{lockingDia}
     \end{center}
 \end{figure}
-
-This means that the data must be carefully managed...blah
 
 \newpage
 \begin{landscape}
