--- a/TP3/dissertation/Design/protocol.tex
+++ b/TP3/dissertation/Design/protocol.tex
@@ -143,4 +143,4 @@ During the implementation of GIM there were several modifications made to the fo
 
 Error handling has been one of the weaker areas of the GIM Protocol. Errors were mostly an after-thought and have several significant issues which need to be addressed. For example, there is currently no easy way of matching en error to a particular command. While it is possible to work backwards by counting the number of responses until we find the matching command it is not practical and it is overly complicated to do this. One solution might be introducing sequence numbers to the Protocol. Each command could be assigned a sequence number or unique identifier of some type. Responses could use the same identifier so that the commands and responses could be easily matched. However this would add a lot of overhear and unnecessary complexity to the protocol, something which we have tried to avoid. Another big problem with errors is the sheer number of possible errors. Almost every command can generate several errors, and every error must have a unique argument identifying the type of error. The server specifies over 70 possible error conditions, and every one of these will generate an \texttt{:ERROR:} response which must be dealt with. This means that the \texttt{:ERROR:} command is extremely complex and confusing to use. A possible solution might be to move away from using arguments to specify the error and instead adopt the same style used by HTTP. A set of errors codes could be used, with numbers between particular ranges reserved for errors of a particular type. For example, the numbers 500-599 could be reserved for server errors, while numbers between 0-100 could be authorisation errors.
 
-The protocol has changed considerably since its first draft and has undergone substantial improvements in terms of ease of use, simplicity, and consistency. Although there are still some minor tweaks which could be made to further the improvement the protocol, it is currently in a stable and usable state. Future extensions to the protocol might include the addition of support for other features such as file transfers and VoIP.
+The protocol has changed considerably since its first draft and has undergone substantial improvements in terms of ease of use, simplicity, and consistency. Although there are still some minor tweaks which could be made to further the improve the protocol, it is currently in a stable and usable state. Future extensions to the protocol might include the addition of support for other features such as file transfers and VoIP.
